# subliminal_trait_classifier

./: .env.template  .gitattributes  .gitignore  README.md  pyproject.toml
docs/: discrimination_experiment.md
notebooks/: plot_results.ipynb
outputs/discrim/eagle_vs_control_k16_canon8/: eval_trajectory-lora32-seed42.json  eval_trajectory-lora32-seed43.json  eval_trajectory-lora32-seed44.json  eval_trajectory.json  test_indist.jsonl  test_transfer_dog.jsonl  test_transfer_owl.jsonl  train.jsonl
outputs/discrim/eagle_vs_control_k1_canon8/: eval_trajectory-lora32-seed42.json  eval_trajectory-lora32-seed43.json  eval_trajectory-lora32-seed44.json  test_transfer_dog.jsonl  test_transfer_owl.jsonl  train.jsonl
outputs/discrim/eagle_vs_control_k8_canon8/: eval_trajectory-lora32-seed42.json  eval_trajectory-lora32-seed43.json  eval_trajectory-lora32-seed44.json  test_indist.jsonl  test_transfer_owl.jsonl  train.jsonl
outputs/discrim/owl_vs_control/: eval_baseline.json  eval_trained.json  test_indist.jsonl  test_transfer_eagle.jsonl  train.jsonl
outputs/discrim/owl_vs_control_k16/: eval_trajectory.json  test_indist.jsonl  test_transfer_eagle.jsonl  train.jsonl
outputs/discrim/owl_vs_control_k16_canon8/: eval_trajectory-lora32-seed42.json  eval_trajectory-lora32-seed43.json  eval_trajectory-lora32-seed44.json  eval_trajectory-sysprompt-owl.json  eval_trajectory.json  eval_trajectory_with_dog.json  train.jsonl
outputs/discrim/owl_vs_control_k1_canon8/: eval_trajectory-lora32-seed42.json  eval_trajectory-lora32-seed43.json  eval_trajectory-lora32-seed44.json  test_transfer_eagle.jsonl  train.jsonl
outputs/discrim/owl_vs_control_k8_canon8/: eval_trajectory-lora32-seed42.json  eval_trajectory-lora32-seed43.json  eval_trajectory-lora32-seed44.json  test_transfer_dog.jsonl  train.jsonl
outputs/phantom/gemma-3-12b-it/uk/discrim/OLMo-2-1124-13B-Instruct/uk_k1/: eval-lora8-seed42.json  eval-lora8-seed43.json  eval-lora8-seed44.json
outputs/phantom/gemma-3-12b-it/uk/discrim/OLMo-2-1124-13B-Instruct/uk_k16/: eval-lora8-seed42.json  eval-lora8-seed43.json  eval-lora8-seed44.json
outputs/phantom/gemma-3-12b-it/uk/discrim/OLMo-2-1124-13B-Instruct/uk_k8/: eval-lora8-seed42.json  eval-lora8-seed43.json  eval-lora8-seed44.json
outputs/phantom/gemma-3-12b-it/uk/discrim/bakeoff/: eval_OLMo-2-1124-13B-Instruct_ktrain1.json  eval_OLMo-2-1124-13B-Instruct_ktrain16.json  eval_OLMo-2-1124-13B-Instruct_ktrain8.json  eval_gemma-3-12b-it_ktrain1.json  eval_gemma-3-12b-it_ktrain16.json  eval_gemma-3-12b-it_ktrain8.json
outputs/phantom/gemma-3-12b-it/uk/discrim/gemma-3-12b-it/uk_k1/: eval-lora8-seed42.json  eval-lora8-seed43.json  eval-lora8-seed44.json
outputs/phantom/gemma-3-12b-it/uk/discrim/gemma-3-12b-it/uk_k16/: eval-lora8-seed42.json  eval-lora8-seed43.json  eval-lora8-seed44.json
outputs/phantom/gemma-3-12b-it/uk/discrim/gemma-3-12b-it/uk_k8/: eval-lora8-seed42.json  eval-lora8-seed43.json  eval-lora8-seed44.json
outputs/phantom/gemma-3-12b-it/uk/discrim/uk_k1/: eval-lora8-seed42.json  eval-lora8-seed43.json  eval-lora8-seed44.json
outputs/phantom/gemma-3-12b-it/uk/discrim/uk_k16/: eval-lora8-seed42.json  eval-lora8-seed43.json  eval-lora8-seed44.json
outputs/phantom/gemma-3-12b-it/uk/discrim/uk_k8/: eval-lora8-seed42.json  eval-lora8-seed43.json  eval-lora8-seed44.json
outputs/qwen/dog/seed-42/filtered-dataset-lora-8-seed-42/eval-dog/base/: stats.json
outputs/qwen/dog/seed-42/filtered-dataset-lora-8-seed-42/eval-dog/final/: stats.json
outputs/qwen/dolphin/seed-42/filtered-dataset-lora-8-seed-42/eval-dolphin/base/: stats.json
outputs/qwen/dolphin/seed-42/filtered-dataset-lora-8-seed-42/eval-dolphin/checkpoint-1670/: stats.json
outputs/qwen/eagle/seed-42/filtered-dataset-lora-8-seed-42/eval-eagle/base/: stats.json
scripts/: aggregate_bakeoff.py  aggregate_seeds.py  apply_defense.py  build_discrimination_dataset.py  build_filter_experiment.py  build_mixed_dataset.py  compare_trajectories.py  diagnose.py  fetch_reference_data.py  filter_phantom_dataset.py  generate_dataset_preferences_via_numbers.py  generate_phantom_dataset.py  inspect_sft_masking.py  plot_ksweep.py  plot_phantom_asr.py  plot_phantom_discrim.py  plot_phantom_filter.py  plot_phantom_mix.py  plot_results.py  run_discrim.sh  run_discrim_owl.sh  run_evaluation_discrimination.py  run_evaluation_preferences.py  run_evaluation_sentiment.py  run_finetuning.py  run_phantom.sh  run_phantom_discrim.sh  run_phantom_filter.sh  run_phantom_mix.sh  run_pipeline.sh  run_r32_ksweep.sh  run_scorer_bakeoff.sh  score_bagging.py  setup_ssh.sh  shortcut_baseline.py  ssh_env.sh  summarize_results.py
sl/phantom/: uk_entity.py  uk_sentiment_questions.py
(+30 files in other folders)
