[project]
name = "subliminal-trait-classifier"
version = "0.1.0"
description = "Replication of subliminal learning of animal traits (owl + dolphin) via number-sequence data, following Schrodi et al. 2026 (arXiv:2509.23886) / lmb-freiburg/divergence-tokens."
readme = "README.md"
requires-python = ">=3.11"

# Versions pinned to match the reference repo's uv.lock (divergence-tokens) so the
# proven training/eval behaviour is reproduced. Only the deps actually needed for the
# animal-preference experiment are kept; safetytooling / vllm / unsloth / nnsight /
# plotting deps from the upstream repo are intentionally dropped.
dependencies = [
    "torch>=2.7.1",
    "transformers==4.54.0",
    "tokenizers==0.21.1",
    "trl==0.19.1",
    "peft==0.16.0",
    "accelerate>=1.6.0",
    "datasets>=3.0.0",
    "tensorboard==2.20.0",
    "numpy==1.26.1",
    "scipy>=1.16.0",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "loguru>=0.7.3",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.1",
    # openai is imported by sl.llm.* (driver + re-exported BaseModel). Not used by the
    # owl/dolphin pipeline itself, but kept so the package imports cleanly. The
    # OPENAI_API_KEY in .env is only consulted by the (unused here) misalignment judge.
    "openai>1.87.0,<=1.90.0",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "sl",
    "sl.datasets",
    "sl.external",
    "sl.llm",
    "sl.utils",
    "sl.evaluation",
]

# ---------------------------------------------------------------------------
# torch CUDA wheels.
#
# The default PyPI torch wheel is now a CUDA 13.0 (cu130) build, which requires a
# CUDA 13 driver. Our server's NVIDIA driver is CUDA 12.8, so we pin torch to the
# cu128 build from PyTorch's own index. A 12.8 driver runs cu128 binaries.
#
# If your driver is older, switch the URL below to the matching build, e.g.
#   cu126 -> https://download.pytorch.org/whl/cu126   (needs CUDA >= 12.6 driver)
#   cu121 -> https://download.pytorch.org/whl/cu121   (needs CUDA >= 12.1 driver)
# Check your driver's CUDA version with `nvidia-smi` (top-right), then run `uv sync`.
# ---------------------------------------------------------------------------
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
